<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabHost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

<!-- TAB 1 BEGIN!  -->

        <LinearLayout
            android:id="@+id/tab1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="60px" >

            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="40dp" >

                    <TextView
                        android:id="@+id/amountTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="35"
                        android:text="@string/bTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge" >
                    </TextView>

                    <EditText
                        android:id="@+id/amountET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:hint="@string/bHint"
                        android:inputType="number|numberDecimal" >
                    </EditText>
                </TableRow>
	−

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/rateTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="35"
                        android:text="@string/rTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge" >
                    </TextView>

                    <EditText
                        android:id="@+id/rateET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:hint="@string/rHint"
                        android:inputType="number|numberDecimal" >
                    </EditText>
                </TableRow>
	−

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/timeTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="35"
                        android:text="@string/tTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge" >
                    </TextView>

                    <EditText
                        android:id="@+id/timeET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:hint="@string/tHint"
                        android:inputType="number|numberDecimal" >
                    </EditText>
                </TableRow>
	−

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/resetButton_loan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:text="@string/rBtn" >
                    </Button>

                    <Button
                        android:id="@+id/calcButton_loan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:text="@string/cBtn" >
                    </Button>
                </TableRow>
	−

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:paddingTop="15dp" >

                    <TextView
                        android:id="@+id/monthlyPayTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="40"
                        android:text="@string/mTitle"
                        android:textSize="16dp" >
                    </TextView>

                    <EditText
                        android:id="@+id/monthlyPayET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="60"
                        android:clickable="false"
                        android:editable="false"
                        android:enabled="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none" >
                    </EditText>
                </TableRow>
	−

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/totalPayTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="40"
                        android:text="@string/totalTitle"
                        android:textSize="16dp" >
                    </TextView>

                    <EditText
                        android:id="@+id/totalPayET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="60"
                        android:clickable="false"
                        android:editable="false"
                        android:enabled="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/errorOutput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textColor="#FF0000"
                        android:textSize="18sp" >
                    </TextView>
                </TableRow>
            </TableLayout>
        </LinearLayout>

<!-- TAB 2 BEGIN!  -->

        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="60px" >

            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="40dp" >

                    <TextView
                        android:id="@+id/i_amountTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="35"
                        android:text="@string/iTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge" >
                    </TextView>

                    <EditText
                        android:id="@+id/i_amountET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:hint="@string/iHint"
                        android:inputType="number|numberDecimal" >
                    </EditText>
                </TableRow>
	−

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/i_rateTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="35"
                        android:text="@string/rTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge" >
                    </TextView>

                    <EditText
                        android:id="@+id/i_rateET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:hint="@string/rHint"
                        android:inputType="number|numberDecimal" >
                    </EditText>
                </TableRow>
	−

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/i_timeTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="35"
                        android:text="@string/tTitle"
                        android:textAppearance="?android:attr/textAppearanceLarge" >
                    </TextView>

                    <EditText
                        android:id="@+id/i_timeET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:hint="@string/tHint"
                        android:inputType="number|numberDecimal" >
                    </EditText>
                </TableRow>
	−

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/resetButton_invest"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:text="@string/rBtn" >
                    </Button>

                    <Button
                        android:id="@+id/calcButton_invest"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:text="@string/cBtn" >
                    </Button>
                </TableRow>
	−

                        <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"  >

                    <TextView
                        android:id="@+id/i_totalPayTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="40"
                        android:text="@string/total_I_Title"
                        android:textSize="16dp" >
                    </TextView>

                    <EditText
                        android:id="@+id/i_totalPayET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="60"
                        android:clickable="false"
                        android:editable="false"
                        android:enabled="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/i_errorOutput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textColor="#FF0000"
                        android:textSize="18sp" >
                    </TextView>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </FrameLayout>

</TabHost>